Fix nav alignment and remove content from hero

--- a/website/src/scss/components/_navbar.scss
+++ b/website/src/scss/components/_navbar.scss
@@ -49,8 +49,9 @@
 		height: 46px;
 	}
 
-	.nav-item + .nav-item {
-		margin-left: 24px;
+	.nav-item:not(:last-child) {
+		margin-bottom: 0;
+		margin-right: 24px;
 	}
 	
 	.nav-link {
